# geopipe-software

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
bash_scripts/: README.md  check_status.sh  run_batch.sh  run_fusion_parallel.sh  run_pipeline_parallel.sh  run_specs_parallel.sh  run_tests.sh
examples/aid_deconfound/: README.md
geopipe/: __init__.py  cli.py
geopipe/cluster/: __init__.py  slurm.py
geopipe/discovery/: __init__.py  catalog.py  known_datasets.yaml  results.py
geopipe/fusion/: __init__.py  schema.py
geopipe/pipeline/: __init__.py  dag.py  tasks.py
geopipe/quality/: __init__.py  checks.py  preflight.py  report.py
geopipe/sources/: __init__.py  base.py  earthengine.py  planetary.py  raster.py  remote_base.py  stac.py  tabular.py
geopipe/specs/: __init__.py  curve.py  dsl.py  variants.py
tests/: __init__.py  test_discovery.py  test_fusion.py  test_pipeline.py  test_preflight.py  test_quality.py  test_remote_sources.py  test_robustness_dsl.py  test_sources.py  test_specs.py
